--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
-    "ethers": "^5.4.7",
+    "ethers": "^5.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
+    "update": "^0.7.4",
+    "wagmi": "^0.7.9",
     "walletconnect": "^1.6.5",
     "web-vitals": "^1.1.2",
     "web3": "^1.5.3",
