--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "connectkit": "^1.0.0",
     "ethers": "^5.7.2",
     "events": "^3.3.0",
+    "json-rpc-engine": "^6.1.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "util": "^0.12.4",
-    "wagmi": "^0.6.0"
+    "wagmi": "^0.6.0",
+    "walletconnect": "^1.7.8"
   },
   "devDependencies": {
     "@types/jest": "^29.0.1",
